Change everything* to the production url :-)

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://guides.xivresources.com/"
+baseURL = "https://thebalanceffxiv.com/"
 languageCode = "en-us"
 title = "Balance Guides"
 theme = "glam"
