--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: The-Balance-FFXIV/balance-static
   branch: main
-  base_url: https://auth.thebalanceffxiv.com/
+  base_url: https://auth.thebalanceffxiv.com
   site_domain: thebalanceffxiv.com
   cms_label_prefix: cms/
 publish_mode: editorial_workflow
