--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,12 +3,12 @@ backend:
   repo: The-Balance-FFXIV/balance-static
   branch: main
   base_url: https://auth.thebalanceffxiv.com
-  site_domain: thebalanceffxiv.com
+  site_domain: www.thebalanceffxiv.com
   cms_label_prefix: cms/
 publish_mode: editorial_workflow
 media_folder: static/img
 public_folder: /img
-site_url: https://thebalanceffxiv.com/
+site_url: https://www.thebalanceffxiv.com/
 show_preview_links: true
 ###
 # Be careful in editing this; discuss in website channels first!
