--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ theme = "glam"
   maxTierGearsets = 8
   maxUltimateGearsets = 4
   maxGearsets = 12
+  discord = 'discord.gg/thebalanceffxiv'
   copyrightMessage = '© SQUARE ENIX CO., LTD. All Rights Reserved | FINAL FANTASY is a registered trademark of Square Enix Holdings Co., Ltd. | All content © their respective authors | The Balance is a non-profit community-owned website.'
 
 [markup]
