editor config for role landing pages

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -59,6 +59,137 @@ collections:
         fields:
           - {label: "Discord Name", name: "discord_id", widget: "string"}
   ##
+  # Role landing page
+  ##
+  - label: "Role landing pages"
+    name: "role-landing"
+    files:
+      - label: "Tanks"
+        name: "tanks"
+        media_folder: "/static/img/jobs/tanks"
+        public_folder: "/img/jobs/tanks"
+        file: "content/jobs/tanks/_index.md"
+        fields:
+        - {label: "Body", name: "body", widget: "markdown"}
+        - label: "Menu hierarchy"
+          name: "menu"
+          widget: "object"
+          fields:
+            - label: "Main"
+              name: "main"
+              widget: "object"
+              fields: 
+                - {label: "Name", name: "name", widget: "select", options: ["Tanks"], default: ["Tanks"]}
+                - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
+        - label: "Role"
+          name: "role"
+          widget: "select"
+          options: ["tanks"]
+          default: ["tanks"]
+        - {label: "Layout", name: "layout", widget: "select", options: ["role_home"], default: ["role_home"]}
+        - {label: "Background Header Image", name: "bg_header_image", widget: "image", choose_url: false}
+        - {label: "Role Hero Image", name: "role_hero_image", widget: "image", choose_url: false}
+      - label: "Healers"
+        name: "healers"
+        file: "content/jobs/healers/_index.md"
+        media_folder: "/static/img/jobs/healers"
+        public_folder: "/img/jobs/healers"
+        fields:
+        - {label: "Body", name: "body", widget: "markdown"}
+        - label: "Menu hierarchy"
+          name: "menu"
+          widget: "object"
+          fields:
+            - label: "Main"
+              name: "main"
+              widget: "object"
+              fields: 
+                - {label: "Name", name: "name", widget: "select", options: ["Healers"], default: ["Healers"]}
+                - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
+        - label: "Role"
+          name: "role"
+          widget: "select"
+          options: ["healers"]
+          default: ["healers"]
+        - {label: "Layout", name: "layout", widget: "select", options: ["role_home"], default: ["role_home"]}
+        - {label: "Background Header Image", name: "bg_header_image", widget: "image", choose_url: false}
+        - {label: "Role Hero Image", name: "role_hero_image", widget: "image", choose_url: false}
+      - label: "Melee"
+        name: "melee"
+        file: "content/jobs/melee/_index.md"
+        media_folder: "/static/img/jobs/melee"
+        public_folder: "/img/jobs/melee"
+        fields:
+        - {label: "Body", name: "body", widget: "markdown"}
+        - label: "Menu hierarchy"
+          name: "menu"
+          widget: "object"
+          fields:
+            - label: "Main"
+              name: "main"
+              widget: "object"
+              fields: 
+                - {label: "Name", name: "name", widget: "select", options: ["Melee"], default: ["Melee"]}
+                - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
+        - label: "Role"
+          name: "role"
+          widget: "select"
+          options: ["melee"]
+          default: ["melee"]
+        - {label: "Layout", name: "layout", widget: "select", options: ["role_home"], default: ["role_home"]}
+        - {label: "Background Header Image", name: "bg_header_image", widget: "image", choose_url: false}
+        - {label: "Role Hero Image", name: "role_hero_image", widget: "image", choose_url: false}
+      - label: "Ranged"
+        name: "ranged"
+        file: "content/jobs/ranged/_index.md"
+        media_folder: "/static/img/jobs/ranged"
+        public_folder: "/img/jobs/ranged"
+        fields:
+        - {label: "Body", name: "body", widget: "markdown"}
+        - label: "Menu hierarchy"
+          name: "menu"
+          widget: "object"
+          fields:
+            - label: "Main"
+              name: "main"
+              widget: "object"
+              fields: 
+                - {label: "Name", name: "name", widget: "select", options: ["Ranged"], default: ["Ranged"]}
+                - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
+        - label: "Role"
+          name: "role"
+          widget: "select"
+          options: ["ranged"]
+          default: ["ranged"]
+        - {label: "Layout", name: "layout", widget: "select", options: ["role_home"], default: ["role_home"]}
+        - {label: "Background Header Image", name: "bg_header_image", widget: "image", choose_url: false}
+        - {label: "Role Hero Image", name: "role_hero_image", widget: "image", choose_url: false}
+      - label: "Casters"
+        name: "casters"
+        file: "content/jobs/casters/_index.md"
+        media_folder: "/static/img/jobs/casters"
+        public_folder: "/img/jobs/casters"
+        fields:
+        - {label: "Body", name: "body", widget: "markdown"}
+        - label: "Menu hierarchy"
+          name: "menu"
+          widget: "object"
+          fields:
+            - label: "Main"
+              name: "main"
+              widget: "object"
+              fields: 
+                - {label: "Name", name: "name", widget: "select", options: ["Casters"], default: ["Casters"]}
+                - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
+        - label: "Role"
+          name: "role"
+          widget: "select"
+          options: ["casters"]
+          default: ["casters"]
+        - {label: "Layout", name: "layout", widget: "select", options: ["role_home"], default: ["role_home"]}
+        - {label: "Background Header Image", name: "bg_header_image", widget: "image", choose_url: false}
+        - {label: "Role Hero Image", name: "role_hero_image", widget: "image", choose_url: false}
+  ##
   # Regular guides
   ##
   - name: 'guides'
